[tool.poetry]
name = "forecastapp-test-server"
version = "0.1.0"
description = "Simple test server for forecastapp.el."
authors = ["Bruno Dias <dias.h.bruno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
